--- a/index.html
+++ b/index.html
@@ -4,5 +4,11 @@
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <button type="button">Click Me!</button>
+<form>
+    <label for="fname">First name:</label><br>
+    <input type="text" id="fname" name="fname"><br>
+    <label for="lname">Last name:</label><br>
+    <input type="text" id="lname" name="lname">
+  </form>
 </body>
 </html>
