--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Average Image Color Picker With JS</title>
-    <!-- CSS -->
-    <link rel="stylesheet" href="style.css">
+    <title>HI</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
-
 <body>
-
-    <!-- Must use online images link for crossorigin problem -->
-    <img src="https://images.pexels.com/photos/2441454/pexels-photo-2441454.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" crossorigin>
-
-
-    <!-- JavaScript -->
-    <script src="script.js"></script>
+    <div class="card">
+        <div class="container">
+            <form>
+                <label for="firstName">Vorname:</label>
+                <input type="text" id="firstName" name="firtsName">
+                <label for="lastName">Nachname:</label>
+                <input type="text" id="lastName" name="lastName">
+                <img id="arrow-button" class="arrow-button" src="images/Arrow.svg" alt="Pfeil">
+            </form>
+            
+        </div>
+    </div>
 </body>
-
 </html>
